# CircuitSim2

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  CircuitSim2.rc  GUI.h  LICENSE  README.md  Simulator.cpp  Simulator.h  Tile.cpp  Tile.h  TileButton.cpp  TileButton.h  TileGate.cpp  TileGate.h  TileLED.cpp  TileLED.h  TileSwitch.cpp  TileSwitch.h  TileWire.cpp  TileWire.h  UserInterface.cpp  UserInterface.h  devnotes.txt  main.cpp  notes.txt  resource.h  test.docx
boards/: Calculator.txt  Computer.txt  ComputerCopy.txt  ComputerGame.txt  ComputerGuessNum.txt  test01.txt  test01Basic.txt  test02.txt  test03LED.txt  test04Loop.txt  test05.txt  test05MoreLED.txt  test06Pixel.txt  test07Input.txt  test08CheckOutput.txt  test09GateBehavior.txt  test10UpdateOrder2.txt  test11LabelAlignment.txt
boards/components/: Add3Module.txt  CalcAdder.txt  CalcDecToBin.txt  DigitDisplay.txt  LargeDisplay.txt  LatchesAndFlipFlops.txt  RippleCarryAdder.txt
boards/components v1_1/: BinToDec.txt  CarryLookaheadAdder.txt  DigitDisplay.txt  DividerWIP.txt  Misc.txt  Multiplier.txt  NewAdd3.txt  NewRCA.txt
boards/components/computer parts/: ComputerPC.txt  DigitDisplay.txt  DualD-Pad.txt  Numpad.txt
boards/computer stuff/: CompBinaryInput.txt  CompDigitDisplay.txt  CompDualD-Pad.txt  CompNumpad.txt  CompPixelDisplay.txt  ComputerALU.txt  ComputerPC.txt  ComputerRAM.txt  ComputerROM.txt  ComputerRegs.txt
boards/computer stuff/developement/: Count.ncc  Divide.ncc  FirstProgram.ncc  GamingTest.ncc  GuessTheNum.ncc  Minecraft.ncc  Multiply.ncc  NumpadTest.ncc  PseudoRNG.ncc  RAMTest.ncc  SquareRoot.ncc  computer layout.docx  computer plans.txt
boards/tests/: Test03LED.txt  Test04Loop.txt  Test07Input.txt  Test12SaveFormat.txt  Test13SaveFormatBad.txt
boards/tutorials/: BinToDec.txt  GateDemo.txt  Tutorial01_TheBasics.txt  Tutorial02_LogicGates.txt  Tutorial03_Binary.txt  Tutorial04_TriState.txt
cmake/: CompileProperties.cmake
cool stuff/: CompilerNCC.cpp  Computer Plans.txt  README.md
cool stuff/CircuitSim1/: CircuitSimulator.cpp  Quick Lookup.txt  Settings.txt
cool stuff/assembly programs/: FirstProgram.ncc  GamingTest.ncc  Multiply.ncc  NumpadTest.ncc  SquareRoot.ncc
cool stuff/computer3/: MultiplierPlan.docx  c3plans.txt
dev/: chunk_rendering.drawio  chunks.md  design_research.md  devnotes.txt
include/gui/: Container.h  ContainerBase.h  Debug.h  Gui.h  Style.h  Theme.h  Timer.h  Widget.h
include/gui/themes/: DefaultTheme.h
resources/: config.ini  objectPixlrBrushes.pbr  texturePackPixlrFile.pxd
resources/shaders/: chunk_frag.glsl  chunk_geom.glsl  chunk_vert.glsl
src/: Board.cpp  Board.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkCoords.h  ChunkDrawable.cpp  ChunkDrawable.h  ChunkRender.cpp  ChunkRender.h  Command.cpp  Command.h  Config.h.in  DebugScreen.cpp  DebugScreen.h  Editor.cpp  Editor.h  EditorInterface.cpp  EditorInterface.h  Entity.cpp  Entity.h  FileStorage.cpp  FileStorage.h  Filesystem.cpp  Filesystem.h  FlatMap.h  LegacyFileFormat.cpp  LegacyFileFormat.h  Locator.cpp  Locator.h  LodRenderer.cpp  LodRenderer.h  MakeUnique.h  MessageLogSink.h  OffsetView.cpp  RegionFileFormat.cpp  RegionFileFormat.h  ResourceBase.h  ResourceManager.cpp  ResourceManager.h  (+26 more)
src/commands/: EditTiles.cpp  EditTiles.h  FillArea.cpp  FillArea.h  FlipTiles.cpp  FlipTiles.h  PlaceTiles.cpp  PlaceTiles.h  RotateTiles.cpp  RotateTiles.h  ToggleTiles.cpp  ToggleTiles.h  WriteTiles.cpp  WriteTiles.h
src/deadcode/: Board.cpp  Board.h  CMakeLists.txt  Simulator.cpp  Simulator.h  Tile.cpp  Tile.h  TileButton.cpp  TileButton.h  TileGate.cpp  TileGate.h  TileLED.cpp  TileLED.h  TileSwitch.cpp  TileSwitch.h  TileWire.cpp  TileWire.h  UserInterface.cpp  UserInterface.h
src/entities/: Label.cpp  Label.h
src/exp/: Board.cpp  Board.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkCoords.h  ChunkCoordsRange.h  ChunkDrawable.cpp  ChunkDrawable.h  ChunkGroup.cpp  ChunkGroup.h  ChunkRender.cpp  ChunkRender.h  DebugScreen.cpp  DebugScreen.h  Editor.cpp  Editor.h  FileStorage.cpp  FileStorage.h  Filesystem.h  FlatMap.h  FlatMap.test.cpp  LegacyFileFormat.cpp  LegacyFileFormat.h  LodRenderer.cpp  LodRenderer.h  OffsetView.cpp  OffsetView.h  RegionFileFormat.cpp  RegionFileFormat.h  ResourceManager.cpp  ResourceManager.h  SubBoard.cpp  SubBoard.h  Tile.cpp  Tile.h  TilePool.h  TileType.cpp  TileType.h  main.cpp
src/exp/commands/: WriteTile.cpp  WriteTile.h
src/exp/tiles/: Blank.cpp  Blank.h  Gate.cpp  Gate.h  Input.cpp  Input.h  Led.cpp  Led.h  Wire.cpp  Wire.h
src/gui/: Button.cpp  Button.h  CMakeLists.txt  Container.cpp  Container.h  ContainerBase.cpp  ContainerBase.h  Gui.cpp  Gui.h  MenuBar.cpp  MenuBar.h  Panel.cpp  Panel.h  README.md  Signal.cpp  Signal.h  Style.cpp  TextBox.cpp  TextBox.h  Theme.cpp  Theme.h  Timer.cpp  Widget.cpp  Widget.h  main.cpp  main2.cpp
src/gui/themes/: DefaultTheme.cpp  DefaultTheme.h
src/gui/widgets/: Button.cpp  Button.h  ChatBox.cpp  CheckBox.cpp  ColorPicker.cpp  DialogBox.cpp  Group.cpp  Label.cpp  Label.h  MenuBar.cpp  MenuBar.h  MultilineTextBox.cpp  Panel.cpp  Panel.h  RadioButton.cpp  Slider.cpp  TextBox.cpp  TextBox.h
src/main/: MainWin32.cpp  main.cpp
src/tiles/: Blank.cpp  Blank.h  Gate.cpp  Gate.h  Input.cpp  Input.h  Label.cpp  Label.h  Led.cpp  Led.h  Wire.cpp  Wire.h
tests/: CMakeLists.txt  FlatMap.test.cpp  RegionFileFormat.test.cpp  Test02UpdateOrder.txt  Test05MoreLED.txt  Test06Pixel.txt  Test08CheckOutput.txt  Test09GateBehavior.txt  Test10UpdateOrder2.txt  Test11LabelAlignment.txt  Test14SaveFormatBad2.txt  Test15AllObjects.txt  Test16TriState.txt  Test17QueryTest.txt  TilePool.test.cpp  mytest.cpp  test.docx
tests/gui/: CMakeLists.txt  Gui.test.cpp  main.cpp  main2.cpp
tests/old/: Test01Basic.txt  Test02UpdateOrder.txt  Test03LED.txt  Test04Loop.txt  Test05MoreLED.txt  Test06Pixel.txt  Test07Input.txt  Test08CheckOutput.txt  Test09GateBehavior.txt  Test10UpdateOrder2.txt  Test11LabelAlignment.txt  Test12SaveFormat.txt  Test13SaveFormatBad.txt  Test14SaveFormatBad2.txt  Test15AllObjects.txt  Test16TriState.txt  Test17QueryTest.txt
(+13 files in other folders)
